--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ MateriaEngenhariaDeSoftware/
 # Excluir arquivos dentro da pasta 2026_TCC_RevisaoBibliografica
 2026_TCC_RevisaoBibliografica/ORIENTAÇÃO PARA ELABORAÇÃO DO PROJETO FINAL.docx
 2026_TCC_RevisaoBibliografica/TEMPLATE-DE-EDIÇÃO-TCC.pdf
-
+Contrato Líbano - Anderson Ribeiro Martisn.pdf
